--- a/ReleaseExample/PresetLoadout/info.ini
+++ b/ReleaseExample/PresetLoadout/info.ini
@@ -1,3 +1,6 @@
 name = PresetLoadout
 displayName = 装备预设系统
 description = 快速保存和应用装备配置! Ctrl+1/2/3 保存, 1/2/3 应用, H 键查看帮助
+version = 1.0.0
+author = jacksonc
+publishedFileId = 3591339491
