feat: enhance UI components and improve preset management functionality

--- a/PresetLoadout.csproj
+++ b/PresetLoadout.csproj
@@ -12,7 +12,7 @@
     <Authors>jacksonc</Authors>
     <Company>Sma1lboy</Company>
     <Product>PresetLoadout</Product>
-    <Description>装备预设系统 - 快速保存和应用装备配置</Description>
+    <Description>像三角洲一样秒速起装！3个自定义预设槽位，即将推出预设码分享系统</Description>
     <RepositoryUrl>https://github.com/Sma1lboy/duckov-preset-loadout</RepositoryUrl>
 
     <!-- 下面这行里填写你的鸭科夫安装路径 -->
