--- a/ReleaseExample/PresetLoadout/info.ini
+++ b/ReleaseExample/PresetLoadout/info.ini
@@ -1,6 +1,6 @@
 name = PresetLoadout
-displayName = 装备预设系统
-description = 快速保存和应用装备配置! Ctrl+1/2/3 保存, 1/2/3 应用, H 键查看帮助
-version = 1.0.1
+displayName = 快速起装 | Quick Loadout
+description = 像三角洲一样秒速起装! L键打开面板, 3个自定义预设槽位, 一键应用装备. 即将推出预设码分享!
+version = 1.0.0
 author = jacksonc
 publishedFileId = 3591339491
